update Spring + Junit versions