@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '2.0.0.M6'
+		springBootVersion = '2.0.0.M7'
 	}
 	repositories {
 		mavenCentral()
@@ -10,7 +10,7 @@ buildscript {
 	}
 	dependencies {
 		classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
-		classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.0-SNAPSHOT'
+		classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.0-M1'
 	}
 }
 
@@ -20,6 +20,7 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.junit.platform.gradle.plugin'
 
 ext.moduleName = 'net.seabears.campsites.api'
+ext.mainClassName = "$moduleName/net.seabears.campsites.api.CampsitesApplication".toString()
 ext.testModules = [
 		'org.junit.jupiter.api',
 		'org.junit.jupiter.params',
@@ -48,10 +49,10 @@ dependencies {
 		exclude module: 'android-json'			// conflicts with jsonassert, which actually requires this module
 		exclude module: 'hamcrest-library'		// conflicts with hamcrest-core
 	}
-	testCompile 'org.junit.jupiter:junit-jupiter-api:5.1.0-SNAPSHOT'
-	testCompile 'org.junit.jupiter:junit-jupiter-params:5.1.0-SNAPSHOT'
-	testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.1.0-SNAPSHOT'
-	testRuntime 'org.junit.platform:junit-platform-console:1.1.0-SNAPSHOT'
+	testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+	testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+	testRuntime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+	testRuntime "org.junit.platform:junit-platform-console:$junitConsoleVersion"
 	testRuntime 'org.testng:testng:6.11'
 	testRuntime 'com.h2database:h2:1.4.196'
 }
@@ -61,6 +62,24 @@ junitPlatform {
 	details = 'TREE'
 	filters {
 		includeClassNamePattern project.hasProperty('IT') ? '^.*IT$' : '^.*Tests?$'
+	}
+}
+
+bootRun {
+	inputs.property("moduleName", moduleName)
+	inputs.property("mainClassName", mainClassName)
+	doFirst {
+		jvmArgs = [
+				'--module-path', classpath.asPath,
+				'--add-modules', 'java.instrument,java.sql,java.xml.bind',
+				'--add-opens', 'java.base/java.lang=spring.core',
+				'--add-opens', 'net.seabears.campsites.database/net.seabears.campsites.db.domain=hibernate.core',
+				'--add-opens', 'net.seabears.campsites.database/net.seabears.campsites.db.domain=spring.core',
+				'--add-opens', 'net.seabears.campsites.services/net.seabears.campsites.be.service.mock=spring.beans',
+				'--module', mainClassName,
+				'--spring.config.location=file:/home/corey/repos/campsites/api/src/main/resources/application.properties',
+		]
+		classpath = files()
 	}
 }
 
